--- a/about.html
+++ b/about.html
@@ -1477,7 +1477,7 @@
 
     <section class="about" style="background-color: #5D4037">
 
-        <h1><strong>Our Team</strong></h1>
+        <h1 style="font-size: 2.5rem; margin-bottom: 20px;"><strong>Behind the Pixels</strong></h1>
 
         <br>
         
@@ -1486,7 +1486,7 @@
                 <img src="images/billy-o-portrait.png" alt="Billy Joinville portfolio">
                 <h3 style="color: white !important"><strong>Billy Joinville</strong></h3>
             
-                <p id="job-title" style="color: white;">Founder and President of WebEaze</p>
+                <p id="job-title" style="color: white;">Founder of WebEaze</p>
 
                 <br> 
 
