--- a/consultation.html
+++ b/consultation.html
@@ -1505,7 +1505,7 @@ section:hover {
 
             <br>
 
-            <p style="font-size: 15px;">While you wait for us to get back to you, check out our <a href="index.html#samples-are-important"><strong style="font-weight: bold !important;">list of samples</strong></a>.</p>
+            <p style="font-size: 15px;">While you wait for us to get back to you, check out our <a href="samples.html"><strong style="font-weight: bold !important;">list of samples</strong></a>.</p>
 
           </section>
 
