--- a/index.html
+++ b/index.html
@@ -2076,16 +2076,6 @@ content: "";
         
             <br>
 
-
-
-
-            <div class="faq-item">
-                <h3 class="faq-question">What if I have an existing website? <span class="arrow"> ▼ </span></h3>
-                <p class="faq-answer"> We love helping businesses level up. Whether you're a tutoring center needing a redesign or a travel business adding booking features—we offer site audits, updates, and full redesigns. Our Growth and Elite packages are perfect for established businesses ready to grow.
-                </p>
-            </div>
-
-
      
             <div class="faq-item">
                 <h3 class="faq-question">When can you finish my website? <span class="arrow"> ▼ </span></h3>
@@ -2094,23 +2084,24 @@ content: "";
                 </p>
             </div>
 
+
             <div class="faq-item">
-                <h3 class="faq-question"> How much support do I get? <span class="arrow"> ▼ </span></h3>
-                <p class="faq-answer"> Every WebEaze package includes ongoing support for as long as your subscription is active. That means unlimited updates, security checks, and help whenever you need it. Whether it's fixing a broken link or adding new class offerings, we've got your back.
+                <h3 class="faq-question"> How much maintenance do I get? <span class="arrow"> ▼ </span></h3>
+                <p class="faq-answer"> Every WebEaze package includes ongoing maintenance for as long as your subscription is active. That means unlimited updates, security checks, and help whenever you need it. Whether it's fixing a broken link or adding new class offerings, we've got your back.
 
                 </p>
             </div>
 
             <div class="faq-item">
-                <h3 class="faq-question">Are there any other costs after subscribing?<span class="arrow"> ▼ </span></h3>
-                <p class="faq-answer">
-                    No surprise fees. We're upfront about all pricing. If you need extras like a custom domain, premium hosting, or add-ons (like booking tools), we'll walk you through the numbers before anything is purchased.
-                </p>
-            </div>
+              <h3 class="faq-question">What if I have an existing website? <span class="arrow"> ▼ </span></h3>
+              <p class="faq-answer"> We love helping businesses level up. Whether you're a tutoring center needing a redesign or a travel business adding booking features—we offer site audits, updates, and full redesigns. Our Growth and Elite packages are perfect for established businesses ready to grow.
+              </p>
+          </div>
+
 
             <div class="faq-item">
                 <h3 class="faq-question">What platforms do you build on?  <span class="arrow"> ▼ </span></h3>
-                <p class="faq-answer"> We build fully custom websites using HTML, CSS, and JavaScript to give you complete flexibility—no bulky templates or hidden platform fees. For clients who need blog functionality, booking systems, or e-commerce, we also work with platforms like WordPress, Shopify, and Squarespace (based on your needs). During your consultation, we'll recommend the best setup for your business.
+                <p class="faq-answer"> We're platform-agnostic, meaning we can work with any website platform you're comfortable with. Most of our clients use WordPress and GitHub, however, you can check our list <a href="https://webeaze.tawk.help/article/hosting" target="_blank"><u>here</u></a> to see all the platforms we support. If you have a specific platform in mind, just ask us during your consultation.
                 </p>
             </div>
 
