--- a/samples.html
+++ b/samples.html
@@ -1350,7 +1350,7 @@ section:hover {
 </style>
 <body class="page-website-setup">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-transparent" style="background-color: #0000003c !important">
+    <nav class="navbar navbar-expand-lg navbar-light bg-transparent" style="background-color: #5D4037 !important">
 
         <a class="navbar-brand" href="index.html">
            
