--- a/faq.html
+++ b/faq.html
@@ -1294,9 +1294,9 @@
 
 
             <div class="faq-item">
-                <h3 class="faq-question">Can I get a refund if I change my mind?<span class="arrow"> ▼ </span></h3>
+                <h3 class="faq-question">Are there refunds?<span class="arrow"> ▼ </span></h3>
 
-                <p class="faq-answer"> Payments are non-refundable, since they cover time and resources spent on your project. That's why we offer a free consultation first—to make sure we're a good fit before you commit. If you're ever unsure, just reach out—we're happy to help. 
+                <p class="faq-answer"> Payments are non-refundable, since they cover time and resources spent on your project. You can check out our full Refund Policy <a href="refund-policy.html" target="_blank"><u>here</u>.</a> 
                 </p>
             </div>
 
@@ -1325,7 +1325,7 @@
 
             <div class="faq-item">
                 <h3 class="faq-question">What platforms do you build on?  <span class="arrow"> ▼ </span></h3>
-                <p class="faq-answer"> We build fully custom websites using HTML, CSS, and JavaScript to give you complete flexibility—no bulky templates or hidden platform fees. For clients who need blog functionality, booking systems, or e-commerce, we also work with platforms like WordPress, Shopify, and Squarespace (based on your needs). During your consultation, we'll recommend the best setup for your business.
+                <p class="faq-answer"> We're platform-agnostic, meaning we can work with any website platform you're comfortable with. Most of our clients use WordPress and GitHub, however, you can check our list <a href="https://webeaze.tawk.help/article/hosting" target="_blank"><u>here</u></a> to see all the platforms we support. If you have a specific platform in mind, just ask us during your consultation.
                 </p>
             </div>
 
