--- a/index.html
+++ b/index.html
@@ -1731,7 +1731,7 @@ content: "";
           
           
 
-        <a href="https://calendly.com/webeaze/free-consultation" class="cta-button-schedule">Schedule Your Free Consult</a>
+        <a href="consultation.html" class="cta-button-schedule">Schedule Your Free Consult</a>
 
        <br>
        <br>
@@ -1922,7 +1922,7 @@ content: "";
               <i class="fas fa-check-circle"></i>
               <h4>Schedule a Consultation</h4>
               <p style="text-align: center; "> 
-                Book a <strong><a href="https://calendly.com/webeaze/free-consultation">free 15-minute consultation</a></strong> at your convenience.
+                Book a <strong><a href="consultation.html">free 15-minute consultation</a></strong> at your convenience.
               </p>
             </div>
             <div class="who-we-help-card fade-in-on-scroll visible" >
