--- a/pricing.html
+++ b/pricing.html
@@ -1845,7 +1845,7 @@
             <h2 style="color: white;">Ready to Get Started?</h2>
             <p style="color: white;">Choose a plan or book a free consultation to ask questions first.</p>
             <br>
-            <a href="https://calendly.com/webeaze/free-consultation" class="cta-learn-more">Request a Free Consultation</a>
+            <a href="consultation.html" class="cta-learn-more">Request a Free Consultation</a>
           </section>
 
         
