--- a/consultation.html
+++ b/consultation.html
@@ -1443,10 +1443,10 @@ section:hover {
 
       
 
-          <p style="font-size: 15px;">While you wait for us to get back to you, check out our <a href="samples.html"><strong style="font-weight: bold !important;">list of samples</strong></a>.</p>
+          <p style="font-size: 15px; padding: 20px !important">While you wait for us to get back to you, check out our <a href="samples.html"><strong style="font-weight: bold !important;">list of samples</strong></a>.</p>
  
 </main>
-
+<hr>
 <footer class="webeaze-footer">
     <div class="footer-grid">
   
