--- a/plan-success.html
+++ b/plan-success.html
@@ -52,9 +52,10 @@ body {
   <h1>
     You're officially our newest client!
   </h1>
-  <p>Thanks for subscribing to a WebEaze plan. 
+<p style="text-align: left; padding: 20px; max-width: 600px; margin: 0 auto; line-height: 1.6;" >Thanks for subscribing to a WebEaze plan.  We've sent you an email with more information. Here are some resources while we work on your 
+    website.
 
-    We've sent you an email with more information. 
+   
     
 
 </p>
@@ -80,9 +81,6 @@ body {
     }
 </style>
 
-<p>Here are some resources while we work on your 
-    website.
-</p>
 
     <a href="portal.html" class="btn btn-light btn-lg" >Visit Your Client Portal</a>
 
