--- a/success.html
+++ b/success.html
@@ -53,17 +53,11 @@ body {
   <h1>
     Your session is booked!
   </h1>
-  <p>Thanks for scheduling a session with WebEaze. We've sent you an email with a calendar invite.
+  <p style="text-align: left; padding: 20px; max-width: 600px; margin: 0 auto; line-height: 1.6;">
+    Thanks for scheduling a session with WebEaze. We've sent you an email with a calendar invite. In the meantime, check out our latest offers and Help Center for answers to common questions.
 </p>
 
-<div class="spoiler">
-    <button class="btn btn-light btn-primary" style="background-color: transparent; color: white;" onclick="toggleSpoiler()">Scheduled a phone call?</button>
-    <div class="spoiler-content" style="display: none;">
-        <p>
-            We'll call you at the number you provided from our phone number, (347) 377-2408. Please ensure your phone is available at your scheduled time. If you miss our call, you'll need to reschedule using the link in your confirmation email. 
-        </p>
-    </div>
-</div>
+
 
 <script>
     function toggleSpoiler() {
@@ -84,15 +78,21 @@ body {
         border-radius: 5px;
     }
 </style>
-
-<p>In the meantime, check out our latest offers and Help Center for answers to common questions. </p>
-
-    <a href="pricing.html" class="btn btn-light btn-lg" >View Offers</a>
-
-    <br>
-    <br>
+    
 
     <a href="https://webeaze.tawk.help" class="btn btn-light btn-lg">WebEaze Help Center</a>
+
+    <br>
+    <br>
+
+    <div class="spoiler">
+        <button class="btn btn-light btn-primary" style="background-color: transparent; color: white;" onclick="toggleSpoiler()">Scheduled a phone call?</button>
+        <div class="spoiler-content" style="display: none;">
+            <p>
+                We'll call you at the number you provided from our phone number, (347) 377-2408. Please ensure your phone is available at your scheduled time. If you miss our call, you'll need to reschedule using the link in your confirmation email. 
+            </p>
+        </div>
+    </div>
 
  
   <footer>&copy; 2025 WebEaze. All rights reserved. 
