--- a/pricing.html
+++ b/pricing.html
@@ -1709,9 +1709,15 @@
                 <thead>
                   <tr>
                     <th>Feature</th>
-                    <th>Essential</th>
-                    <th>Growth</th>
-                    <th>Elite</th>
+                    <th>
+                        <a href="https://webeaze.tawk.help/article/essential-plan" target="_blank">Essential</a>
+                    </th>
+                    <th>
+                        <a href="https://webeaze.tawk.help/article/growth-plan" target="_blank">Growth</a>
+                    </th>
+                    <th>
+                        <a href="https://webeaze.tawk.help/article/elite-plan" target="_blank">Elite</a>
+                    </th>
                   </tr>
                 </thead>
                 <tbody>
