--- a/samples.html
+++ b/samples.html
@@ -1453,7 +1453,7 @@ section:hover {
   </section>
 
   <!-- CTA Section -->
-  <section style="background-image: url(images/about-background.png); color: white; text-align: center; padding: 60px 20px; border-radius: 0;">
+  <section style="background-image: url(images/about-background.png); color: white; text-align: center; padding: 60px 20px; border-radius: 0; background-repeat: no-repeat; background-size: cover;">
     <h2>Let's Showcase Your Business Next</h2>
     <p style="font-size: 18px; max-width: 600px; margin: auto;">Every website you've seen here started with a quick, friendly chat. Book yours — no pressure.</p>
     <br />
