--- a/maintenance.html
+++ b/maintenance.html
@@ -1448,7 +1448,7 @@ section:hover {
           <span id="typed-text"></span>
         </h1>
         <p id="intro-services-html" class="slide-in-text">
-          No hourly surprises. No tickets. Just proactive fixes, updates, and performance boosts — all under one clear monthly or yearly plan.
+          No hourly surprises. No stress. Just proactive fixes, updates, and performance boosts. All under one clear monthly or yearly plan.
         </p>
       </header>
       
@@ -1457,7 +1457,7 @@ section:hover {
       <section class="about-services-page" style="border-radius: 0;">
         <div class="services-card">
           <h3><i class="fas fa-sync-alt"></i> Unlimited Updates</h3>
-          <p>Need to change text, swap images, or add a page? It's included, always.</p>
+          <p>Need to change text, swap images, or rearrange pages? It's included, always.</p>
         </div>
         <div class="services-card">
           <h3><i class="fas fa-mobile-alt"></i> Fast & Mobile-First</h3>
@@ -1550,7 +1550,7 @@ section:hover {
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
   <script>
-    const fullText = "Unlimited Website Maintenance";
+    const fullText = "Unlimited Website Maintenance. Yes. Seriously.";
     const target = document.getElementById("typed-text");
     let idx = 0;
   
