--- a/consultation.html
+++ b/consultation.html
@@ -1334,7 +1334,7 @@
 }
 
 .website-request-header {
-    background-image: url('images/construction-worker.jpg');
+    background-image: url('images/construction-worker.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
