--- a/portal.html
+++ b/portal.html
@@ -1538,7 +1538,7 @@ p strong, p b, strong, b {
       "12-31": "New Year's Eve",
     };
   
-    const showDelayMessage = true; 
+    const showDelayMessage = false; 
     const delayText = " We're experiencing a high volume of requests. Response times may be longer than usual. ";
   
     function updateHoursMessage() {
