--- a/refund-policy.html
+++ b/refund-policy.html
@@ -1260,9 +1260,20 @@ Thank you for choosing WebEaze. We appreciate your business. Please read our ref
         <br>
         <br>
 
-        <strong>Fraudulent Chargebacks</strong>: Chargebacks are considered fraudulent if you have received the service. If you file a chargeback, you'll be responsible for all fees associated with the chargeback in addition to the original amount charged. In addition, you will be banned from using WebEaze services in the future. We reserve the right to take legal action against you if necessary.
+        <strong>Service Concerns</strong>: If you experience any issues with your website or service, please contact us promptly. We will work with you to resolve the matter to your satisfaction within the scope of your plan.
+
+        <br>
+        <br>
+
+        <strong>Fraudulent Chargebacks</strong>: Initiating a chargeback after services have been delivered is considered misuse of the payment process. In such cases, you may be held responsible for any associated fees in addition to the original amount charged. Continued misuse may result in termination of your WebEaze account and future service restrictions. 
+        <br>
+        <i>
+            All project activity, communications, and deliverables are documented and may be provided as evidence to payment processors in the event of a dispute.
+        </i>
 
         </p>
+
+       
 
   
 
