--- a/refund-policy.html
+++ b/refund-policy.html
@@ -1250,7 +1250,7 @@
         <br>
         <br>
 
-Thank you for choosing WebEaze. We appreciate your business. Please read our refund policy carefully.
+        Thank you for choosing WebEaze. We appreciate your business and are committed to delivering quality service. Please review our policy below: 
 
         </p>
 
