--- a/portal.html
+++ b/portal.html
@@ -1341,7 +1341,7 @@ p strong, p b, strong, b {
                 <li><a href="website-request.html">Submit a Website Request</a> (fastest) </li>
                 <li><a href="https://calendly.com/webeaze/session-full-setups" target="_blank" rel="noopener">Book a Zoom Session</a></li>
                 <li><a href="https://webeaze.tawk.help" target="_blank" rel="noopener">Visit Our Help Center</a> </li>
-                <li><strong>Live Chat - bottom right corner of this page</li>
+                <li><strong>Live Chat - bottom right corner of this page</strong></li>
               </ul>
             </div>
         </div>
