--- a/portal.html
+++ b/portal.html
@@ -1415,7 +1415,7 @@ p strong, p b, strong, b {
           <h2>FAQs</h2>
           <br>
           <div class="spoiler" onclick="toggleSpoiler(this)">When will my website launch?<i class="fas fa-chevron-down arrow"></i>
-            <div class="spoiler-content">Most new websites are completed within 1-2 weeks. If we didn't hold a consultation with you, we'll follow uo via email to collect more information needed to build your website to your satisfaction. </div>
+            <div class="spoiler-content">Most new websites are completed within 1-2 weeks. If we didn't hold a consultation with you, we'll follow up via email to collect more information needed to build your website to your satisfaction. </div>
           </div>
           <div class="spoiler" onclick="toggleSpoiler(this)">Can I upgrade my plan? <i class="fas fa-chevron-down arrow"></i>
             <div class="spoiler-content">You may upgrade your plan at any time. You can manage your plan through your Stripe account.
