--- a/index.html
+++ b/index.html
@@ -2314,6 +2314,10 @@ content: "";
       <p>© 2025 WebEaze. Created and designed by WebEaze. Published on <a href="https://pages.github.com/">GitHub</a>.</p>
     </div>
   </footer>
+
+  <!-- Start of HubSpot Embed Code -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js-na2.hs-scripts.com/242171361.js"></script>
+<!-- End of HubSpot Embed Code -->
   
   
 
