--- a/maintenance.html
+++ b/maintenance.html
@@ -1450,6 +1450,9 @@ section:hover {
         <p id="intro-services-html" class="slide-in-text">
           No hourly surprises. No stress. Just proactive fixes, updates, and performance boosts. All under one clear monthly or yearly plan.
         </p>
+
+        <p id="intro-services-html" class="slide-in-text">
+          See what we can do for you, all under one plan. 
       </header>
       
       
@@ -1482,7 +1485,9 @@ section:hover {
       </section>
 
       <section style="background-image: url(images/painter.png); color: white; text-align: center; padding: 60px 20px; border-radius: 0; background-repeat: no-repeat; background-size: cover;">
-        <h2>Keep Your Website Fresh, Always</h2>
+        <h1 class="hero-title slide-in-text" style="font-size: 36px; max-width: 800px; margin: auto; text-shadow: 2px 2px 4px rgba(0,0,0,0.5); font-weight: bold; line-height: 1.2;
+        ">
+        Keep Your Website Fresh, Always</h1>
         <p style="font-size: 18px; max-width: 600px; margin: auto;">
         No more chasing developers or wondering if your site is up to date. One subscription keeps everything running smoothly.
         </p>
