--- a/contact-us.html
+++ b/contact-us.html
@@ -1245,6 +1245,10 @@
           
         }
 
+        .nav-link {
+            color: #5D4037 !important;
+        }
+
 .form-wrapper {
   background: black !important;
   padding: 60px 20px;
@@ -1357,7 +1361,7 @@ section:hover {
 
 </header>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-transparent" style="background-color: #5D4037 !important">
+<nav class="navbar navbar-expand-lg navbar-light bg-transparent" style="background-color: white !important">
 
     <a class="navbar-brand" href="index.html">
        
