--- a/refund-policy.html
+++ b/refund-policy.html
@@ -1205,7 +1205,7 @@
 
         <a class="navbar-brand" href="index.html">
            
-            <img src="images/webeaze-transparent.png" alt="Brand Logo">
+            <img src="images/default-monochrome-white.svg" style="width: 70%;" alt="Brand Logo">
         </a> 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
