--- a/samples.html
+++ b/samples.html
@@ -29,7 +29,7 @@
     /* HERO — centered */
     header.samples-hero{
       position:relative;
-      min-height:60vh;
+      min-height:10vh;
       padding:120px 20px 60px;
       display:flex;
       flex-direction:column;
@@ -95,7 +95,7 @@
     .reveal.show{opacity:1; transform:translateY(0)}
 
     @media (max-width: 767.98px){
-      header.samples-hero{min-height:56vh; padding:100px 16px 40px}
+      header.samples-hero{min-height:36vh; padding:100px 16px 40px}
       .filters .container{padding:10px 12px}
       main.samples{padding:48px 0 70px}
       .cta .wrap{padding:72px 16px}
@@ -130,7 +130,7 @@
         display: flex;
         justify-content: space-around;
         width: 100%;
-        margin-top: -10px; 
+        margin-top: 13px; 
         font-weight: bold;
         font-family: 'Poppins', sans-serif;
 
@@ -169,37 +169,7 @@
         background: rgba(255, 255, 255, 0.334); /* Hamburger icon background */
     }
 
-/* ——— NAV RESET: remove page-specific overrides that break centering ——— */
-.navbar { top: 0 !important; margin-top: 0 !important; }
-.navbar-nav { width: auto !important; margin-top: 0 !important; justify-content: center !important; }
-.nav-link { margin-top: 0 !important; }
-
-/* ——— BLOG-LIKE NAVBAR ——— */
-body { padding-top: 72px; }           /* account for fixed bar */
-.navbar.blog-nav {
-  position: fixed; left:0; right:0; top:0; z-index:1030;
-  background-color:#7851a9 !important;  /* same purple as your blog header */
-  padding: 10px 16px;
-  border-bottom: 1px solid rgba(0,0,0,.08);
-}
-.blog-nav .navbar-brand img { height:56px; width:auto; }
-.blog-nav .navbar-collapse { justify-content:center; flex-grow:0; } /* center link group */
-.blog-nav .navbar-nav { display:flex; gap:64px; white-space:nowrap; }
-.blog-nav .nav-link { color:#fff !important; font-weight:700; padding:.25rem 0; border-radius:10px; }
-.blog-nav .nav-link:hover { background:rgba(255,255,255,.12); }
-
-/* visible hamburger on colored bg */
-.navbar-light .navbar-toggler { border-color: rgba(255,255,255,.35); }
-.navbar-light .navbar-toggler-icon{
-  background-image:url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255,0.9)' stroke-width='2' stroke-linecap='round' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
-}
-
-/* collapse behavior like blog */
-@media (max-width: 991.98px){
-  .blog-nav .navbar-collapse{ justify-content:flex-start; flex-grow:1; }
-  .blog-nav .navbar-nav{ flex-direction:column; gap:12px; }
-}
-
+    /* ---- NAV CENTER FIX ---- */
 
 
 
@@ -208,7 +178,7 @@ body { padding-top: 72px; }           /* account for fixed bar */
 
 <nav class="navbar navbar-expand-lg navbar-light bg-transparent" style="background-color: #7851a9 !important;">
     <a class="navbar-brand" href="index.html">
-      <img src="images/webeaze-transparent.png" alt="WebEaze Logo" style="height: 60px;">
+      <img src="images/default-monochrome-white.svg" alt="WebEaze Logo" style="width: 70%;">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -238,7 +208,7 @@ body { padding-top: 72px; }           /* account for fixed bar */
   
 
 <body class="page-website-setup">
-  <!-- NAV (retained) -->
+
   
 
   <!-- HERO -->
@@ -368,8 +338,8 @@ body { padding-top: 72px; }           /* account for fixed bar */
   <!-- CTA (full-width) -->
   <section class="cta" aria-label="Book a consultation">
     <div class="wrap">
-      <h2>Let's showcase your business next</h2>
-      <p>Every project here began with a quick, friendly chat. 15 minutes
+      <h1>Let's showcase your business next</h1> 
+      <p style="text-align: center !important;">Every project here began with a quick, friendly chat. 15 minutes
         is time invested in your success. 
       </p>
       <div class="cta-actions">
