--- a/website-request.html
+++ b/website-request.html
@@ -1721,7 +1721,7 @@ section:hover {
       "12-31": "New Year's Eve",
     };
   
-    const showDelayMessage = false; 
+    const showDelayMessage = true; 
     const delayText = " We're experiencing a high volume of requests. Response times may be longer than usual. ";
   
     function updateHoursMessage() {
@@ -1744,7 +1744,7 @@ section:hover {
       let mainStatus = "";
   
       if (isHoliday) {
-        mainStatus = `Closed today in observance of ${holidayName}. We'll return next business day at 9:00am ET.`;
+        mainStatus = `Closed today in observance of ${holidayName}. We'll return on the next business day at 9:00am ET.`;
         message.style.backgroundColor = "#CD5C5C";
       } else if (isWeekday && isBusinessHours) {
         mainStatus = "We're available now until 5:00pm ET.";
