--- a/portal.html
+++ b/portal.html
@@ -1390,12 +1390,12 @@ p strong, p b, strong, b {
         <div class="tab-content" id="whats-new">
           <h2>Latest Updates</h2>
           <i>
-            Updated: August 12, 2025
+            Updated: September 5, 2025
           </i>
           <ul>
             <li> 
                 <i class="fas fa-check"> </i>
-                From August 29 - September 7, Zoom and Live Chat support are unavailable. We'll still respond to requests via email, however, response times may be delayed during this time.
+                Throughout the fall season, expect times where our response times may be longer than usual due to a high volume of requests. We appreciate your patience during these times, and we'll communicate any significant delays via email. 
             </li>
 
 
@@ -1403,7 +1403,7 @@ p strong, p b, strong, b {
 
             <li>
                 <i class="fas fa-check"></i>
-                We no longer allow clients to pause their plans. If you are unable to make your monthly payment, you must cancel your plan and re-subscribe when you're ready.
+                We are working on a new client portal that will allow you to submit and track requests directly, and view important information about your website. Stay tuned for updates!
             </li>
 
 
@@ -1540,7 +1540,7 @@ p strong, p b, strong, b {
       "12-31": "New Year's Eve",
     };
   
-    const showDelayMessage = true; 
+    const showDelayMessage = false; 
     const delayText = " We're experiencing a high volume of requests. Response times may be longer than usual. ";
   
     function updateHoursMessage() {
