--- a/website-request.html
+++ b/website-request.html
@@ -1721,7 +1721,7 @@ section:hover {
       "12-31": "New Year's Eve",
     };
   
-    const showDelayMessage = true; 
+    const showDelayMessage = false; 
     const delayText = " We're experiencing a high volume of requests. Response times may be longer than usual. ";
   
     function updateHoursMessage() {
