--- a/anniversary.html
+++ b/anniversary.html
@@ -75,6 +75,10 @@
         padding: 10px;
         border-radius: 5px;
     }
+
+    .spoiler-content p {
+        font-size: 10px; 
+    }
   </style>
 </head>
 <body>
@@ -152,8 +156,7 @@
 
     <div class="spoiler">
         <button class="btn btn-light btn-primary" style="background-color: transparent; color: white;" onclick="toggleSpoiler()">Terms and Conditions for Referrals</button>
-        <div class="spoiler-content" style="display: none;">
-
+    <div class="spoiler-content" style="display: none; text-align: left;">
         <p>
             1. Tax Responsibility: All referral earnings are considered taxable income. You're solely responsible for reporting any earnings to your tax authority. WebEaze does not withhold taxes or provide tax documents unless legally required.
         </p>
@@ -186,10 +189,17 @@
             8. Subject to Terms and Privacy: Participating in this referral program means that you have read and agree to our full Terms and Privacy Policy that you are bound to with any engagement with WebEaze or its affiliates. 
 
         </p>
-
-
         </div>
-    
+    </div>
+
+
+
+    <script>
+        function toggleSpoiler() {
+            const content = document.querySelector('.spoiler-content');
+            content.style.display = content.style.display === 'none' ? 'block' : 'none';
+        }
+    </script>
 
   
   <footer>
