--- a/about.html
+++ b/about.html
@@ -143,7 +143,7 @@
     <div class="hero-inner container-narrow">
       <span class="eyebrow">About WebEaze</span>
       <h1>Elegant websites. Ongoing support. <span class="gold">No hourly rates.</span></h1>
-      <p class="lead">Founded in October 2024 (as Billy Joinville Web Services) and rebranded in March 2025, WebEaze exists to make professional web design <em>simple, fast, and stress‑free</em> for small businesses and creators.</p>
+      <p class="lead">Founded in October 2024 (as Billy Joinville Web Services) and rebranded in March 2025, WebEaze exists to make professional web design <em>simple, fast, and stress-free</em> for small businesses and creators.</p>
       <div class="badges" aria-label="Key facts">
         <span class="badge-chip">43+ clients served</span>
         <span class="badge-chip">Subscriptions: monthly & yearly</span>
@@ -275,7 +275,7 @@
         <dd>No. We offer monthly and yearly subscriptions for predictable costs.</dd>
         <dt>How do I get support?</dt>
         <dd>Zoom, Live Chat, or Email. Plus our Help Center, 24/7.</dd>
-        <dt>Do you do e‑commerce?</dt>
+        <dt>Do you do e-commerce?</dt>
         <dd>Yes. We help you choose the right stack (Stripe/Square/Woo/Wix/etc.) and maintain it.</dd>
       </dl>
     </div>
@@ -284,7 +284,7 @@
   <!-- CTA Banner -->
   <section class="section-brown text-center">
     <div class="container-narrow">
-      <h2 class="mb-2">Let’s build something that works—beautifully.</h2>
+      <h2 class="mb-2">Let's build something that works—beautifully.</h2>
       <p class="small">Schedule a consult or pick a plan to get started.</p>
       <div class="cta">
         <a class="btn btn-gold" href="/pricing"><strong>Get Started</strong></a>
