--- a/about.html
+++ b/about.html
@@ -123,7 +123,7 @@
   <!-- Nav (kept minimal; hook to your existing nav styles if needed) -->
   <nav class="navbar navbar-expand-lg navbar-dark" style="background:rgba(0,0,0,.12)">
     <a class="navbar-brand" href="/">
-      <img src="images/webeaze-transparent.png" alt="WebEaze" style="height:52px" />
+      <img src="/images/default-monochrome-white.svg" alt="WebEaze" style="height:52px" />
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
