--- a/pricing.html
+++ b/pricing.html
@@ -185,7 +185,7 @@
   <!-- Anniversary promo -->
   <div class="promo-bar" role="region" aria-label="Anniversary promotion">
     Fall in love with a $0 setup fee (usually $299) through September 30. 
-    <a class="btn" href="https://webeaze.io/consultation.">Get Started</a>
+    <a class="btn" href="https://webeaze.io/consultation">Get Started</a>
   </div>
 
   <!-- NAV -->
