--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ details.card-simple{
   <!-- BENEFITS -->
   <section class="py-5 section-band bg-benefits" id="benefits" data-parallax>
     <div class="container container-narrow surface">
-      <h2 class="h3 text-center mb-4 reveal" style="font-weight: bold !important;">Why WebEaze stands out</h2>
+      <h2 class="h3 text-center mb-4 reveal" style="font-weight: bold !important;">Our styles. And likes. </h2>
   
       <div class="features-strip">
         <div class="feature reveal">
